--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "resolve": "^1.22.2",
     "reusify": "^1.0.4",
     "run-parallel": "^1.2.0",
+    "scrollreveal": "^4.0.9",
     "source-map-js": "^1.0.2",
     "sucrase": "^3.32.0",
     "supports-preserve-symlinks-flag": "^1.0.0",
